--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,7 @@
 ---
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+
 export interface Props {
   title: string;
 }
@@ -16,7 +19,9 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
+    <slot name="Header"><Header /></slot>
     <slot />
+    <slot name="Footer"><Footer /></slot>
   </body>
 </html>
 <style is:global>
@@ -32,6 +37,9 @@ const { title } = Astro.props;
   html {
     font-family: system-ui, sans-serif;
     background-color: #f6f6f6;
+  }
+  body {
+    margin: 0;
   }
   code {
     font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
