Add basic footer.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,16 @@
 ---
 ---
 
-<footer>Footer here</footer>
+<footer>Copyright 2023 FPGA Arcade - All Rights Reserved</footer>
+
+<style>
+  footer {
+    overflow: hidden;
+    background-color: #161616;
+    color: #a1a1a1;
+    padding: 3em;
+
+    text-align: center;
+    font-size: small;
+  }
+</style>
