--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,6 +40,9 @@ const { title } = Astro.props;
   }
   body {
     margin: 0;
+    display: grid;
+    min-height: 100vh;
+    grid-template-rows: auto 1fr auto;
   }
   code {
     font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
