Start of theme.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,8 +6,8 @@
 <style>
   footer {
     overflow: hidden;
-    background-color: #161616;
-    color: #a1a1a1;
+    background-color: var(--rpl-footer-background-color);
+    color: var(--rpl-footer-text-color);
     padding: 3em;
 
     text-align: center;
