--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -28,8 +28,8 @@ import { Image } from "astro:assets";
     height: 46px;
 
     overflow: hidden;
-    background-color: #161616;
-    color: #a1a1a1;
+    background-color: var(--rpl-header-background-color);
+    color: var(--rpl-header-text-color);
   }
 
   header > img {
