--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,6 +33,11 @@ const { title } = Astro.props;
       #da62c4 30%,
       white 60%
     );
+
+    --rpl-header-background-color: #161616;
+    --rpl-header-text-color: #a1a1a1;
+    --rpl-footer-background-color: var(--rpl-header-background-color);
+    --rpl-footer-text-color: var(--rpl-header-text-color);
   }
   html {
     font-family: system-ui, sans-serif;
