Add vercel logo to footer.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,11 @@
 ---
+import vercelLogo from "../assets/powered-by-vercel.svg";
 ---
 
-<footer>Copyright 2023 FPGA Arcade - All Rights Reserved</footer>
+<footer>
+  <p>Copyright 2023 FPGA Arcade - All Rights Reserved</p>
+  <img src={vercelLogo.src} width="190" alt="Powered by Vercel" />
+</footer>
 
 <style>
   footer {
