Add link underlines

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,6 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="About">
   <main>
-    <p>Coming Soon(tm)</p>
+    <p><a href="/">home link</a>. Coming Soon(tm)</p>
   </main>
 </Layout>
