--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,23 +8,28 @@ import { Image } from "astro:assets";
 
 <header>
   <Image src={headerLogo} alt="FPGA Arcade Logo" />
-  <ul class="nav-list">
-    <li>Hardware</li>
-    <li>News</li>
-    <li>FAQ</li>
-    <li>Docs</li>
-    <li>Releases</li>
-    <li>Forum</li>
-    <li><GithubIcon style="fill: white" /></li>
-  </ul>
-  <div class="three-lions">
-    <MenuIcon />
-  </div>
+
+  <nav>
+    <ul class="nav-list">
+      <li><a href="/">Hardware</a></li>
+      <li><a href="/demo">News</a></li>
+      <li>FAQ</li>
+      <li>Docs</li>
+      <li>Releases</li>
+      <li>Forum</li>
+      <li><GithubIcon style="fill: white" /></li>
+    </ul>
+    <div class="three-lions">
+      <MenuIcon />
+    </div>
+  </nav>
 
   <style>
     header {
+      --rpl-link-color: var(--rpl-header-text-color);
+
       display: flex;
-      justify-content: flex-end;
+      justify-content: space-between;
       align-items: center;
       gap: 1em;
 
@@ -56,7 +61,6 @@ import { Image } from "astro:assets";
       .nav-list {
         display: flex;
         align-items: center;
-        margin-left: auto;
 
         gap: 1em;
         list-style-type: none;
