--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,6 +38,8 @@ const { title } = Astro.props;
     --rpl-header-text-color: #a1a1a1;
     --rpl-footer-background-color: var(--rpl-header-background-color);
     --rpl-footer-text-color: var(--rpl-header-text-color);
+    --rpl-link-color: #e7501e;
+    --rpl-link-underline-color: var(--rpl-link-color);
   }
   html {
     font-family: system-ui, sans-serif;
@@ -52,5 +54,27 @@ const { title } = Astro.props;
   code {
     font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
       DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
+  }
+  a {
+    display: inline-block;
+    position: relative;
+
+    color: var(--rpl-link-color);
+    text-decoration: none;
+  }
+  a:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: var(--rpl-link-underline-color);
+
+    transform: scaleX(0);
+    transition: transform 0.3s ease-out;
+  }
+  a:hover::after {
+    transform: scaleX(1);
   }
 </style>
