--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,6 +40,7 @@ const { title } = Astro.props;
     --rpl-footer-text-color: var(--rpl-header-text-color);
     --rpl-link-color: #e7501e;
     --rpl-link-underline-color: var(--rpl-link-color);
+    --rpl-border-color: var(--rpl-link-color);
   }
   html {
     font-family: system-ui, sans-serif;
