Upgrade icons and add twitter icon.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
 import headerLogo from "../assets/header-logo.png";
-import { GithubIcon } from "vue3-simple-icons";
+import { GithubIcon, XIcon } from "vue3-simple-icons";
 
 import { Image } from "astro:assets";
 ---
@@ -21,8 +21,11 @@ import { Image } from "astro:assets";
       <li><a href="https://docs.fpgaarcade.com/">Docs</a></li>
       <li><a href="https://build.fpgaarcade.com/releases">Releases</a></li>
       <li>
-        <a href="https://github.com/FPGAArcade/"
-          ><GithubIcon title="FPGAArcade GitHub" style="fill: white;" />
+        <a href="https://github.com/FPGAArcade/">
+          <GithubIcon title="FPGAArcade GitHub" style="fill: white;" />
+        </a>
+        <a href="https://twitter.com/ArcadeFPGA">
+          <XIcon title="FPGAArcade Twitter" style="fill: white;" />
         </a>
       </li>
     </ul>
