--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,10 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Layout from "@layouts/Layout.astro";
 ---
 
 <Layout title="About">
   <main>
-    <p><a href="/">home link</a>. Coming Soon(tm)</p>
+    <p>Coming Soon(tm)</p>
+    <!-- Recent news posts or featured posts -->
   </main>
 </Layout>
