--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,8 +3,9 @@ import Layout from "@layouts/Layout.astro";
 ---
 
 <Layout title="About">
+  <section class="full-width">Full width HERO goes here</section>
   <main>
+    <p>Main content here...</p>
     <p>Coming Soon(tm)</p>
-    <!-- Recent news posts or featured posts -->
   </main>
 </Layout>
