Move styles to global.css

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -40,7 +40,7 @@ import { Image } from "astro:assets";
     align-items: center;
     gap: 1em;
 
-    padding: 0.5em;
+    padding: 0.5rem 1.5rem;
     height: 46px;
 
     overflow: hidden;
