--- a/src/pages/news.astro
+++ b/src/pages/news.astro
@@ -1,17 +1,19 @@
 ---
 import Layout from "@layouts/Layout.astro";
+import { getCollection } from "astro:content";
 
-const posts = await Astro.glob("./news/*.md");
+const posts = await getCollection("posts");
+//console.log(posts);
 ---
 
 <Layout title="News">
   <main>
-    <p>List of recent news posts here..</p>
+    <p>plain news listing...</p>
     <ul>
       {
         posts.map((post) => (
           <li>
-            <a href={post.url}>{post.frontmatter.title}</a>
+            <a href={`/news/${post.slug}`}>{post.data.title}</a>
           </li>
         ))
       }
