Add figure/caption support for images

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,4 +17,8 @@ import vercelLogo from "../assets/powered-by-vercel.svg";
     text-align: center;
     font-size: small;
   }
+
+  footer img {
+    margin: auto;
+  }
 </style>
