Limit post width

--- a/src/pages/news/[slug].astro
+++ b/src/pages/news/[slug].astro
@@ -32,3 +32,10 @@ const { Content } = await post.render();
     <Content />
   </main>
 </Layout>
+
+<style>
+  main {
+    margin-inline: auto;
+    max-width: 80ch;
+  }
+</style>
