--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -65,14 +65,16 @@ img {
 /* following three classes work around min-content breaking responsive images
    within the figure */
 figure {
+    display: inline-block;
+
     background: white;
     border: 1px solid darkgrey;
 
     padding: 0.5rem;
     margin: 1rem;
+    max-width: max(80ch, 50%);
 
     text-align: center;
-    display: inline-block;
 }
 
 figure.center {
