--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,6 +27,7 @@ const { title } = Astro.props;
     <style>
       .content {
         padding-inline: 1rem;
+        margin-block: 1rem;
       }
 
       @media (min-width: 40em) {
