--- a/src/pages/news.astro
+++ b/src/pages/news.astro
@@ -4,7 +4,9 @@ import { getCollection, getEntries } from "astro:content";
 import { Image } from "astro:assets";
 import { Icon } from "astro-icon";
 
-const posts = (await getCollection("posts")).sort((a,b) => b.data.created - a.data.created);
+import {createExcerpt} from "src/utils/post-excerpt"
+
+const posts = (await getCollection("posts")).sort((a,b) => b.data.created.getTime() - a.data.created.getTime())
 ---
 
 <Layout title="News">
@@ -46,7 +48,7 @@ const posts = (await getCollection("posts")).sort((a,b) => b.data.created - a.da
                       />
                     )}
                   </div>
-                  <div class="post__description">{post.data.description ?? post.body.slice(0,140)}</div>
+                  <div class="post__description">{post.data.description ?? createExcerpt(post.body)}</div>
                 </a>
               </article>
             </>
@@ -57,6 +59,11 @@ const posts = (await getCollection("posts")).sort((a,b) => b.data.created - a.da
   </main>
 </Layout>
 
+<style is:global>
+  .post a > div:not(:first-child) {
+    margin: 0.5rem;
+  }
+</style>
 <style>
   .posts {
     --max-col-count: 3;
@@ -88,10 +95,6 @@ const posts = (await getCollection("posts")).sort((a,b) => b.data.created - a.da
     width: 100%;
     text-decoration: none;
     color: black;
-  }
-
-  .post a > div:not(:first-child) {
-    margin: 0.5rem;
   }
 
   .post:is(:hover, :focus-within) {
