--- a/src/pages/news.astro
+++ b/src/pages/news.astro
@@ -1,9 +1,9 @@
 ---
 import Layout from "@layouts/Layout.astro";
 import { getCollection, getEntries } from "astro:content";
-import { Image } from "astro:assets";
 import { Icon } from "astro-icon";
 import PostExcerpt from "@components/PostExcerpt.astro";
+import PostImage from "@components/PostImage.astro";
 
 const posts = (await getCollection("posts")).sort((a,b) => b.data.created.getTime() - a.data.created.getTime())
 ---
@@ -39,15 +39,8 @@ const posts = (await getCollection("posts")).sort((a,b) => b.data.created.getTim
                     </span>
                     {false && <span><Icon name="mdi:book-open-variant" /><span>?? minutes</span></span>}
                   </div>
-                  <div class="post__image">
-                    {post.data.image && (
-                      <Image
-                        src={post.data.image}
-                        alt={post.data.imageAlt ?? ""}
-                      />
-                    )}
-                  </div>
-                  <PostExcerpt class="post__description" post={post}></PostExcerpt>
+                  <PostImage post={post}></PostImage>
+                  <PostExcerpt post={post}></PostExcerpt>
                 </a>
               </article>
             </>
