--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -138,6 +138,27 @@ import { Image } from "astro:assets";
     transform: rotateZ(-45deg);
   }
 
+  a:hover {
+      text-decoration: none;
+  }
+
+  a:after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      bottom: 0;
+      left: 0;
+      background-color: var(--rpl-link-underline-color);
+
+      transform: scaleX(0);
+      transition: transform 0.3s ease-out;
+  }
+
+  a:hover::after {
+      transform: scaleX(1);
+  }
+
   @media (min-width: 40em) {
     .nav {
       position: static;
