--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -38,21 +38,12 @@ a {
     text-decoration: none;
 }
 
-a:after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: var(--rpl-link-underline-color);
-
-    transform: scaleX(0);
-    transition: transform 0.3s ease-out;
+a:hover {
+    text-decoration: underline;
 }
 
-a:hover::after {
-    transform: scaleX(1);
+a:hover img {
+    opacity: 0.85;
 }
 
 /* Responsive images by default */
