--- a/src/pages/news.astro
+++ b/src/pages/news.astro
@@ -8,16 +8,8 @@ const posts = (await getCollection("posts")).sort((a,b) => b.data.created.getTim
 
 <Layout title="News">
   <main>
-    <h1>Latest News</h1>
-    <p>Test card based layout for recent news items.</p>
-    <section class="featured-posts">
-      {
-        posts.slice(0,3).map(async (post) => <Post post={post} summary></Post>)
-      }
-    </section>
-
     <h1>News</h1>
-    <p>Test layout for full summary news items.</p>
+
     <section class="posts">
       {
         posts.map(async (post) => <Post post={post} summary></Post>)
@@ -27,26 +19,14 @@ const posts = (await getCollection("posts")).sort((a,b) => b.data.created.getTim
 </Layout>
 
 <style>
+  main {
+    margin-inline: auto;
+    max-width: 80ch;
+  }
+  
   .posts {
     display: grid;
     grid-gap: 1rem;
-  }
-
-  .featured-posts {
-    --max-col-count: 3;
-    --grid-gap: 1rem;
-    --total-grid-gap: calc(var(--max-col-count) * var(--grid-gap));
-
-    display: grid;
-
-    /* Auto fill grid but limit to at most N cols regardless of browser width */
-    grid-template-columns: repeat(
-      auto-fill,
-      minmax(
-        max(14rem, calc((100% - var(--total-grid-gap)) / var(--max-col-count))),
-        1fr
-      )
-    );
-    grid-gap: var(--grid-gap);
+    max-width: 80ch;
   }
 </style>
